--- a/math_utils/pom.xml
+++ b/math_utils/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -10,6 +9,7 @@
   <packaging>jar</packaging>
 
   <name>math_utils</name>
+  <!-- Replace the URL with your project's actual URL -->
   <url>http://www.example.com</url>
 
   <properties>
@@ -35,10 +35,11 @@
 
   <build>
     <plugins>
+      <!-- Use a stable release version of the Surefire Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
+        <version>3.0.0</version>
       </plugin>
     </plugins>
   </build>
